<resources>
    <string name="app_name">ServiceApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Service App</string>
    <string name="service">Service</string>
    <string name="title_activity_service_details"></string>
    <string name="title_activity_ticket_raised">Ticket Raised</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="invoice">Invoice Number</string>
    <string name="purchase_date">Invoice Date</string>
    <string name="deal">Description</string>
    <string name="other_problem">Other Problem</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="empty">Field is empty</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_pass">Password must be minimum 6 character</string>
    <string name="company_name">ItechGalaxy</string>
    <string name="title_activity_showcase">Showcase</string>
    <string name="showcase">Mini Smallest HD Spy Digital DV Webcam Camera DVR Video Recorder Camcorder</string>
    <string name="title_activity_showcase_details">ShowcaseDetailsActivity</string>
    <string name="title_activity_show_case_details">ShowCaseDetailsActivity</string>
    <string name="title_activity_enquiry_form">Enquiry Form</string>
    <string name="rating">Please give us rating</string>
    <string name="title_activity_profile">Profile</string>
    <string name="invalid_number">Please Enter 10 digit Number</string>
    <string name="title_activity_warranty">Warranty</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ticket_assign">Ticket Assign</string>
    <string name="ticket_close">Ticket Close</string>
    <string name="ticket_open">Ticket Open</string>
    <string name="ticket_theater">Ticket Theater</string>
    <string name="title_activity_raised_ticket">Raised Ticket</string>
    <string name="rationale_storage">To Access Your Phone Read and Write Permission.</string>
    <string name="title_activity_account">Account</string>
    <string name="title_video">Video Library</string>
    <string name="customer_care">Customer Care</string>
    <string name="knowledge">Knowledge</string>
    <string name="dvr">DVR</string>
    <string name="search_hint">Search here</string>
    <string name="title_activity_forget">Forget Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="internet_not_connect">No Internet Connection</string>
    <string name="url_login">/Token</string>
    <string name="url_profile">/api/CustomerApp/GetProfile</string>
    <string name="url_feedback">/api/CustomerApp/TicketFeedback?Tfeedback=""</string>
    <string name="url_product_list">/api/CustomerApp/GetProductList?prod=""</string>
    <string name="url_enquiry">/api/CustomerApp/SendEnquiry?enq=""</string>
    <string name="url_raised_ticket">/api/CustomerApp/TicketRaise?Traise=\"\"</string>
    <string name="url_category">/api/CustomerApp/GetCategory?cat=""</string>
    <string name="url_banner">/api/CustomerApp/GetBrand?brand=\"\"</string>
    <string name="invalid_pass_not">Password does not match.</string>
    <string name="url_change_password">/api/CustomerApp/changePassword</string>
    <string name="url_problem">/api/CustomerApp/GetProblem</string>
    <string name="url_ticket_list">/api/CustomerApp/GetTicketList</string>
    <string name="title_activity_feeback_ticket">Feedback</string>
    <string name="title_activity_registration">Registration</string>
    <string name="url_acc_knowledge">/api/CustomerApp/KnowledgeList</string>
    <string name="url_acc_customer_care">/api/CustomerApp/CustCareList</string>
    <string name="url_acc_video">/api/CustomerApp/VideoList</string>
    <string name="url_registration">/api/CustomerApp/CustomerRequest</string>
    <string name="title_activity_device">Device Manager</string>
    <string name="title_activity_pdf">PDFActivity</string>
    <string name="url_warranty">/api/CustomerApp/InvoiceList</string>
    <string name="url_forget_pswd">/api/CustomerApp/ForgotPassword</string>
    <string name="url_change_pswd_after_login">/api/CustomerApp/changePasswordAfterLogin</string>
    <string name="url_feedback_list">/api/CustomerApp/FeedBackList</string>
    <string name="url_firebase_token">api//CustomerApp/GCMInstance</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="no_internet">No Internet Connection .</string>

</resources>
