<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:fillViewport="true"
    tools:context="itg8.com.serviceapp.ticket.RaisedTicketFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="Product Name"
                android:singleLine="true"
                android:focusable="false"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <!--<Spinner-->
        <!--android:id="@+id/spinner_product"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:background="@drawable/bg_spinner"-->
        <!--android:spinnerMode="dropdown" />-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/input_layout_product">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/product"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_product">

            <EditText
                android:id="@+id/input_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                android:hint="Person Name"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_invoice_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_product_name">

            <EditText
                android:id="@+id/input_invoice_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/invoice"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_invoice_name"
            android:focusable="false">

            <EditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/purchase_date"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_deal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_date"
            android:focusable="false">

            <EditText
                android:id="@+id/input_deal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"

                android:layout_marginTop="10dp"
                android:hint="@string/deal"
                android:singleLine="true"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/spinner_problem"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/input_layout_deal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_spinner"
            android:spinnerMode="dropdown" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner_problem"
            android:visibility="gone">

            <EditText
                android:id="@+id/input_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/other_problem"
                android:lines="3"
                android:maxLines="3"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_other"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="Submit"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>

</ScrollView>
